--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   change_app_package_name: ^1.5.0
   shared_preferences: ^2.5.3
   http: ^1.5.0
+  fl_chart: ^0.68.0
 
 
 dev_dependencies:
